@@ -4,6 +4,12 @@
 	* unix/tclXtNotify.c
 	* unix/tclXtTest.c
 	* generic/tclPipe.c    Fix gcc warning (with -fstrict-aliasing=2)
+	* library/auto.tcl     Spacing and style fixes.
+	* library/history.tcl
+	* library/init.tcl
+	* library/package.tcl
+	* library/safe.tcl
+	* library/tm.tcl
 
 2010-06-13  Donal K. Fellows  <dkf@users.sf.net>
 
